# GeoWire

./: .gitignore  GeoWire_Codex_Implementation_Scaffold (1).md  GeoWire_Master_Design (2).md  GeoWire_Method_Training_Details.md  GeoWire_PROGRESS.md  GeoWire_Training_Protocol.md  README.md
geowire/: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements-train.txt  requirements-vggt.txt
geowire/configs/: base.yaml  deepspeed_zero2.json  eval_mmsi.yaml  eval_viewspatial.yaml  eval_vsi.yaml  phase0_graph.yaml  phase1_tip.yaml  phase2_sft.yaml
geowire/docs/: BOOTSTRAP_REPORT.md  CODEX_IMPLEMENTATION_SCAFFOLD.md  DATA_CARD.md  DECISIONS.md  EXPERIMENT_LOG.md  MASTER_DESIGN.md  PAPER_EVIDENCE.md  PROGRESS.md  TRAINING_PROTOCOL.md
geowire/geowire/: __init__.py  cli.py  constants.py  types.py
geowire/scripts/: _bootstrap.py  audit_leakage.py  build_formal_manifests.sh  build_graphs.py  cache_qwen_layout_grid.py  cache_vggt.py  check_training_readiness.py  download_resources.py  evaluate.py  export_case_study.py  generate_toy_scene.py  inspect_environment.py  inspect_qwen3vl.py  launch_phase1_tip_tmux.sh  launch_phase2_sft_tmux.sh  prepare_llava_hound_manifest.py  prepare_spatial4nips_manifest.py  smoke_all.py  train_sft.py  train_tip.py  verify_coordinate_contract.py  verify_graph.py  verify_qwen_bridge_parity.py
geowire/tests/: test_cached_tip_training.py  test_certify_edges.py  test_evaluate.py  test_graph_builder.py  test_leakage_audit.py  test_projective_edges.py  test_qwen_bridge_parity.py  test_qwen_layout.py  test_readiness.py  (+4 more)
(+55 files in other folders)
