[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geowire"
version = "0.1.0"
description = "Geometry-wired cross-frame semantic transport for video spatial reasoning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch>=2.5",
  "safetensors",
  "huggingface_hub",
  "einops",
  "Pillow",
  "opencv-python-headless",
  "matplotlib",
  "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "hydra-core", "omegaconf"]
train = ["transformers", "accelerate", "peft", "deepspeed", "qwen-vl-utils", "tensorboard", "wandb"]

[tool.setuptools.packages.find]
include = ["geowire*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
